Replaced Sun Base64 reference with default Base 64